added gradle wrapper 2.12

--- a/build.gradle
+++ b/build.gradle
@@ -10,3 +10,7 @@ dependencies {
 	compile "com.miglayout:miglayout:$migLayoutVersion"
 	compile "jgoodies:forms:$formsVersion"
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.12'
+}
