--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven'
 
 sourceCompatibility = "$jdkVersion"
 
@@ -14,3 +15,5 @@ dependencies {
 task wrapper(type: Wrapper) {
     gradleVersion = '2.12'
 }
+
+defaultTasks 'wrapper', 'clean', 'build', 'check', 'assemble', 'install'
