--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
 	maven { url "https://jitpack.io" }
 }
 dependencies {
-	compile 'com.github.gscaparrotti:BenderModel:016838acf2'
+	compile "com.github.gscaparrotti:BenderModel:$benderModelJitpack"
 	compile "org.danilopianini:javalib-java7:$javalib7Version"
 	compile "com.miglayout:miglayout:$migLayoutVersion"
 	compile "jgoodies:forms:$formsVersion"
