--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ jdkVersion = 1.8
 javalib7Version = [0, 1]
 migLayoutVersion = [3, 4]
 formsVersion = [1, 2]
+benderModelJitpack = 75ac35c925
 
 pmdTargetJdk = 1.7
 pmdVersion = 5.2.+
