--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:jpadb
+spring.datasource.url=jdbc:h2:~/benderDB
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
